fixed the image error on smaller screens

--- a/founder.css
+++ b/founder.css
@@ -54,7 +54,14 @@ body {
   .founder-image,
   .founder-text {
     width: 100%;
-    height: auto;
+  }
+  
+  .founder-image {
+	  min-height:800px;
+	  height:300px;
+	  margin: 0 auto;
+	  aspect-ratio: 1 / 1;
+	  border-radius:30%;
   }
 
   .founder-text {
